phalcom-ast/tests/snapshots/integration__lexer__symbol_adjacency_required_for_selector_form.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"#move (a, b)\")"
---
[
    Hash,
    Identifier(
        "move",
    ),
    LParen,
    Identifier(
        "a",
    ),
    Comma,
    Identifier(
        "b",
    ),
    RParen,
    Eof,
]
