phalcom-ast/tests/snapshots/integration__lexer__symbol_name_literal.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"#move #size #_field\")"
---
[
    Hash,
    Identifier(
        "move",
    ),
    Hash,
    Identifier(
        "size",
    ),
    Hash,
    FieldIdentifier(
        "_field",
    ),
    Eof,
]
