phalcom-ast/tests/snapshots/integration__lexer__symbol_operator_selectors.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"#+ #- #* #/ #% #== #!= #< #<= #> #>=\")"
---
[
    Hash,
    Plus,
    Hash,
    Minus,
    Hash,
    Asterisk,
    Hash,
    Slash,
    Hash,
    Percent,
    Hash,
    EqualEqual,
    Hash,
    BangEqual,
    Hash,
    Less,
    Hash,
    LessEqual,
    Hash,
    Greater,
    Hash,
    GreaterEqual,
    Eof,
]
