phalcom-ast/tests/snapshots/integration__lexer__symbol_selector_literal_with_whitespace.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"#move(_,to,duration) #move(\\n  _,\\n  to,\\n  duration\\n) #size()\")"
---
[
    Hash,
    Identifier(
        "move",
    ),
    LParen,
    Underscore,
    Comma,
    Identifier(
        "to",
    ),
    Comma,
    Identifier(
        "duration",
    ),
    RParen,
    Hash,
    Identifier(
        "move",
    ),
    LParen,
    Underscore,
    Comma,
    Identifier(
        "to",
    ),
    Comma,
    Identifier(
        "duration",
    ),
    Newline,
    RParen,
    Hash,
    Identifier(
        "size",
    ),
    LParen,
    RParen,
    Eof,
]
